# Kvasov_Andrey_IU4_23B_BIG_HW

./: CMakeLists.txt  README.md  main.c
db/: books.csv  student_books.csv  students.csv  users.csv
include/: authentication.h  book_funcs.h  book_sort.h  data_input.h  databases.h  init_db.h  log.h  menus.h  save_and_free_db.h  students_funcs.h
sha-2/: sha-256.h
src/: authentication.c  book_funcs.c  book_sort.c  data_input.c  databases.c  init_db.c  log.c  menus.c  save_and_free_db.c  students_funcs.c
